Second about image

--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,8 @@
     <div class="container">
       <div class="row d-flex justify-content-center text-center">
         <div class="col-lg-8">
-          <img src="{% static 'assets/img/about.png' %}" alt="">
+          <img src="{% static 'assets/img/1.png' %}" alt="">
+          
           <h1>Who's Kennedy?</h1>
             <hr>
           <p class="mb-0">I am currently in my final year at KCA University, pursuing a degree in Software Engineering. With a strong analytical mindset and a passion for problem-solving. I focus on developing high-performance applications that address real-world challenges.
