--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -564,7 +564,7 @@ h6 {
 }
 
 li a {
-  color: #3498db;  /* Change this to the color you prefer */
+  color: #1E90FF;  /* Change this to the color you prefer */
   text-decoration: none;
 }
 
